syntax = "proto3";

import "google/protobuf/timestamp.proto";

package broker;
option go_package = "/proto";

service Broker {
    rpc Publish (PublishRequest) returns (PublishResponse);
    rpc Subscribe(SubscribeRequest) returns (stream MessageResponse);
}

message PublishRequest {
    string topic = 1;
    bytes body = 2;
}

message PublishResponse {
    uint64 id = 1;
    google.protobuf.Timestamp published_at = 2;
}

message SubscribeRequest {
    string topic = 1;
    string consumer_name = 2;
}

message MessageResponse {
    uint64 id = 1;
    bytes body = 2;
    string topic = 3;
    google.protobuf.Timestamp published_at = 4;
}